fix: make user feedback changes to size of alien popup, remove infinte loading on apod api fail , reduce text size in smaller viewport and add a flickering effect for the popup text

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
   margin: 0;
 }
 
-p {
+p,
+li {
   font-family: "Patrick";
 }
 
@@ -68,7 +69,7 @@ nav > a {
   justify-content: space-between;
   align-items: center;
   z-index: 5;
-  bottom: 5px;
+  bottom: 0px;
   height: 30vh;
   width: 100%;
   box-shadow: 0px 2px 4px 1px rgb(0, 0, 0);
@@ -92,6 +93,10 @@ nav > a {
 
 .carousel figure {
   margin-left: 5px;
+}
+
+.carousel figcaption {
+  font-family: "Patrick";
 }
 
 .carousel img:hover,
@@ -309,6 +314,7 @@ section.visor h2 {
 
   .carousel figcaption {
     opacity: 0;
+    font-family: sans-serif;
     transition: opacity 0.3s ease;
   }
 
